--- a/index.html
+++ b/index.html
@@ -31,6 +31,38 @@
             <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo natus mollitia perferendis ipsam ratione fugiat asperiores quod? Ipsam corporis perferendis corrupti? Illum accusantium sed porro pariatur sint quo aliquam magnam.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor harum autem recusandae exercitationem aliquid enim similique numquam incidunt rerum, atque fugit officia consequatur maxime laborum perspiciatis aut amet libero quo.</li>
         </ul>
+
+        <table border>
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="seconda_riga">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                </tr>
+                <tr class="quarta_riga">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
+   <footer>
+    <p class="fondo_pagina">
+    Copyright The Booleaner - Tutti i diritti riservati
+    </p>
+   </footer>
   </body>
 </html>
