--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="img/tim-2.jpg" alt="">
         <p>1st Photo: John S. and James L.Knight Foundation,by Scott Henrichsen</p>
         <p>2nd Photo: Wikimedia, by Paul Clarke</p><br><br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis pariatur fuga delectus adipisci magnam, voluptatum est exercitationem illum ad! Porro illum labore perferendis eos, reprehenderit neque odio omnis quod sapiente.
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis pariatur fuga delectus adipisci <mark> magnam, voluptatum est exercitationem illum ad! Porro illum labore perferendis eos, reprehenderit </mark> neque odio omnis quod sapiente.
         Nihil, aperiam dolor voluptate explicabo error tempora aliquid non deleniti officia asperiores dolore voluptatem ut amet magnam maxime nesciunt ullam esse ratione velit totam! A repellat consequatur quam obcaecati esse!
         Aliquid, perferendis dolorum nam placeat adipisci minima eos error nisi iure sequi commodi voluptates inventore ipsa esse maiores, quis repudiandae totam. Culpa repudiandae dolorum expedita dolorem officia, ipsam accusantium minus.
         Possimus ipsam mollitia facilis quibusdam autem eos, consequatur velit, itaque excepturi eligendi sed placeat! Accusantium quia necessitatibus iste, ex, veniam, distinctio labore libero debitis tenetur voluptatibus maiores quam non facilis.</p><br><br>
